# session2memory

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: adapters.md
docs/plans/: 2026-05-31-session2memory-skill-hks-alignment.md  2026-06-02-session2memory-phase1-review-platform.md  2026-06-02-session2memory-phase2-state-platform.md  2026-06-05-distill-solidify-implementation.md  2026-06-09-session-worklog-implementation.md
docs/specs/: 2026-05-31-session2memory-skill-hks-alignment-design.md  2026-06-02-session2memory-memory-platform-design.md  2026-06-09-session-worklog-design.md  distill-solidify.md
scripts/: daily-session-memory-to-hks.sh
skills/session2memory/: SKILL.md  skill.json
src/session2memory/: agentic_os_index.py  cli.py  distill.py  extraction.py  filtering.py  llm_extract.py  llm_extract_mock.py  memory_entries.py  memory_lifecycle.py  (+15 more)
tests/: test_adapter_cursor.py  test_adapter_hermes.py  test_adapter_openclaw.py  test_adapter_opencode.py  test_adapter_registry.py  test_adapters_jsonl.py  test_agentic_os_import.py  test_agentic_os_index.py  test_cli.py  test_cli_distill_solidify.py  test_distill.py  test_filtering_extraction.py  test_gitignore.py  test_llm_extract.py  test_memory_lifecycle.py  test_migration.py  test_models.py  test_promote.py  test_redaction.py  test_review_bulk.py  test_review_conflicts.py  test_review_normalize.py  test_review_ui.py  test_review_web.py  test_scripts.py  test_skill.py  test_solidify.py  test_state_store.py  test_sync_back.py  test_validate.py  test_worklog.py  test_workspace.py  test_writer_pipeline.py
(+30 files in other folders)
